--- a/en/_posts/2025-06-09-noofficefm-76.md
+++ b/en/_posts/2025-06-09-noofficefm-76.md
@@ -30,7 +30,7 @@ Is WhatsApp really a work tool — or just a fast track to chaos? How often do k
 
 🟣 [Apple Podcasts](https://podcasts.apple.com/podcast/no-office/id1527466890)\\
 🔵 [Google Podcasts](https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy50cmFuc2lzdG9yLmZtL25vb2ZmaWNl)\\
-🟡 [RSS](https://nozbe.com/nooffice.rss)?c=michaelteam)\\
+🟡 [RSS](https://nozbe.com/nooffice.rss)\\
 🟠 [Overcast](https://overcast.fm/itunes1527466890/no-office)\\
 🔴 [YouTube on Nozbe channel](https://youtube.com/NozbeCom)
 
