--- a/en/_posts/2025-10-27-noofficefm-85.md
+++ b/en/_posts/2025-10-27-noofficefm-85.md
@@ -28,7 +28,7 @@ In a world that rewards busyness over progress, these 10 books taught me how to 
 
 🟣 [Apple Podcasts](https://podcasts.apple.com/podcast/no-office/id1527466890)\\
 🔵 [Google Podcasts](https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy50cmFuc2lzdG9yLmZtL25vb2ZmaWNl)\\
-🟡 [RSS](https://nozbe.com/nooffice.rss)?c=michaelteam)\\
+🟡 [RSS](https://nozbe.com/nooffice.rss)\\
 🟠 [Overcast](https://overcast.fm/itunes1527466890/no-office)\\
 🔴 [YouTube on Nozbe channel](https://youtube.com/NozbeCom)
 
