--- a/en/_posts/2026-01-29-boise.md
+++ b/en/_posts/2026-01-29-boise.md
@@ -52,7 +52,7 @@ As we started recording, we first were sitting and discussing some [Nozbe histor
 I won't spoil the podcast for you, but suffice to say that there are three key takeaways from this show for me:
 
 1. Nozbe's positioning: *project management app you (and your team) will actually use*
-2. Nozbe's [expert program](https://nozbe.com/expert)?c=michaelteam) as a key way of growing my business.
+2. Nozbe's [expert program](https://nozbe.com/expert/?c=michaelteam) as a key way of growing my business.
 3. Metrics and people responsible for them…
 
 I won't say more… subscribe to [Nathan's show](https://www.youtube.com/@thenathanbarryshow) to watch and listen to the episode when it airs this March.
