--- a/pl/_posts/2026-03-01-ai.md
+++ b/pl/_posts/2026-03-01-ai.md
@@ -98,7 +98,7 @@ I teraz mamy wiele pomysłów. Funkcje AI, które pomogą Ci tworzyć nowe proje
 
 Jednak musimy być bardzo uważni na dane naszych użytkowników. Nie chcemy, żeby wyciekały do OpenAI czy jakiejkolwiek innej firmy. Dlatego wprowadzamy funkcje AI ostrożnie w tym roku, jedną po drugiej, testując, czy wszystko działa dobrze i używając własnych serwerów AI tam, gdzie prywatność naszych użytkowników jest najważniejsza.
 
-Jeśli chcesz zobaczyć, co budujemy, zapraszam do zapisania się na nasz webinar o AI we wtorek, 10 lutego, na **[nozbe.com/webinar](https://nozbe.com/webinar)?c=michaelteam)** – pokażę te funkcje i wyjaśnię nasze podejście.
+Jeśli chcesz zobaczyć, co budujemy, zapraszam do zapisania się na nasz webinar o AI we wtorek, 10 lutego, na **[nozbe.com/webinar](https://nozbe.com/webinar/?c=michaelteam)** – pokażę te funkcje i wyjaśnię nasze podejście.
 
 ## Jak AI wpływa na produktywność
 
