--- a/en/_posts/2025-05-12-noofficefm-74.md
+++ b/en/_posts/2025-05-12-noofficefm-74.md
@@ -27,7 +27,7 @@ Panicking before your vacation? This episode is your go-to checklist to disconne
 
 🟣 [Apple Podcasts](https://podcasts.apple.com/podcast/no-office/id1527466890)\\
 🔵 [Google Podcasts](https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy50cmFuc2lzdG9yLmZtL25vb2ZmaWNl)\\
-🟡 [RSS](https://nozbe.com/nooffice.rss)?c=michaelteam)\\
+🟡 [RSS](https://nozbe.com/nooffice.rss)\\
 🟠 [Overcast](https://overcast.fm/itunes1527466890/no-office)\\
 🔴 [YouTube on Nozbe channel](https://youtube.com/NozbeCom)
 
