--- a/en/_posts/2025-12-08-noofficefm-88.md
+++ b/en/_posts/2025-12-08-noofficefm-88.md
@@ -26,7 +26,7 @@ Do you ever find yourself searching for client information all over the company?
 
 🟣 [Apple Podcasts](https://podcasts.apple.com/podcast/no-office/id1527466890)\\
 🔵 [Google Podcasts](https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy50cmFuc2lzdG9yLmZtL25vb2ZmaWNl)\\
-🟡 [RSS](https://nozbe.com/nooffice.rss)?c=michaelteam)\\
+🟡 [RSS](https://nozbe.com/nooffice.rss)\\
 🟠 [Overcast](https://overcast.fm/itunes1527466890/no-office)\\
 🔴 [YouTube on Nozbe channel](https://youtube.com/NozbeCom)
 
