--- a/pl/_posts/2025-06-09-niemabiura-76.md
+++ b/pl/_posts/2025-06-09-niemabiura-76.md
@@ -31,7 +31,7 @@ Czy WhatsApp to narzędzie do pracy, czy przepis na chaos? Ile razy w Twojej fir
 
 🟣 [Apple Podcasts](https://podcasts.apple.com/pl/podcast/nie-ma-biura/id1526795631)\\
 🔵 [Google Podcasts](https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy50cmFuc2lzdG9yLmZtL25pZW1hYml1cmE)\\
-🟡 [RSS](https://nozbe.com/niemabiura.rss)?c=michaelteam)\\
+🟡 [RSS](https://nozbe.com/niemabiura.rss)\\
 🟠 [Overcast](https://overcast.fm/itunes1526795631/nie-ma-biura)\\
 🔴 [YouTube na kanale Nozbe Poland](https://youtube.com/NozbePoland)
 
