--- a/pl/_posts/2025-09-08-niemabiura-82.md
+++ b/pl/_posts/2025-09-08-niemabiura-82.md
@@ -26,7 +26,7 @@ Po wakacjach wróciliśmy do podcastowania i mamy nowy odcinek, taki bardzo waż
 
 🟣 [Apple Podcasts](https://podcasts.apple.com/pl/podcast/nie-ma-biura/id1526795631)\\
 🔵 [Google Podcasts](https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy50cmFuc2lzdG9yLmZtL25pZW1hYml1cmE)\\
-🟡 [RSS](https://nozbe.com/niemabiura.rss)?c=michaelteam)\\
+🟡 [RSS](https://nozbe.com/niemabiura.rss)\\
 🟠 [Overcast](https://overcast.fm/itunes1526795631/nie-ma-biura)\\
 🔴 [YouTube na kanale Nozbe Poland](https://youtube.com/NozbePoland)
 
