--- a/pl/_posts/2025-11-10-niemabiura-86.md
+++ b/pl/_posts/2025-11-10-niemabiura-86.md
@@ -26,7 +26,7 @@ Czujesz, że praca Cię przytłacza? Że ciągle brakuje Ci czasu dla siebie, mi
 
 🟣 [Apple Podcasts](https://podcasts.apple.com/pl/podcast/nie-ma-biura/id1526795631)\\
 🔵 [Google Podcasts](https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy50cmFuc2lzdG9yLmZtL25pZW1hYml1cmE)\\
-🟡 [RSS](https://nozbe.com/niemabiura.rss)?c=michaelteam)\\
+🟡 [RSS](https://nozbe.com/niemabiura.rss)\\
 🟠 [Overcast](https://overcast.fm/itunes1526795631/nie-ma-biura)\\
 🔴 [YouTube na kanale Nozbe Poland](https://youtube.com/NozbePoland)
 
