--- a/en/_posts/2026-01-29-boise.md
+++ b/en/_posts/2026-01-29-boise.md
@@ -17,27 +17,27 @@ Why not travel half way across the globe to meet your business idol? This is wha
 
 Sometimes it does make sense to travel so far to meet someone you’ve admired for years and have them walk through your business struggles and try to help you out.
 
-When I pitched to Nathan's team me and my [Nozbe][n] as an idea for a podcast, I thought it was a long shot. But they picked me and invited me over. Now I had to decide if I can reall do this and travel half way across the globe for one single podcast episode.
+When I pitched to Nathan's team me and my [Nozbe][n] as an idea for a podcast, I thought it was a long shot. But they picked me and invited me over. Now I had to decide if I can really do this and travel half way across the globe for one single podcast episode.
 
 I consulted with my team and with my wife and myself… and there was no question about it - I get to meet my business guru in person, record a podacst with him about my business and hopefully get some great advice from him. I had to make it work.
 
-I had a 12-hour flight from Europe to Dallas, Texas, and then after I cleared the US immigration I switched to my final 3-hour flight to Boise, Idaho - where Nathan lives and where Kit (formerly ConvertKit) comes from.
+I took a 12-hour flight from Europe to Dallas, Texas, and then after I cleared the US immigration I switched to my final 3-hour flight to Boise, Idaho - where Nathan lives and where Kit (formerly ConvertKit) comes from.
 
 ## 🚀 Was it worth it? Hell yes!
 
-It was definitely worth it, Nathan and Kara (Nathan’s producer), made it so great. I’ve had a blast… and I’ve received great advice and a to-do list to follow. The episode will air in March of 2026, so stay tuned…
+It was definitely worth it, Nathan and Kara (Nathan’s producer), made it so great. I’ve had a blast… and I’ve received great advice and a to-do list to follow. The episode will air in March of this year, so stay tuned…
 
 Nathan was very generous with his time, very thoughtful and we did manage to dig pretty deep into my business…
 
-Thanks to him and his advice, I'm completely re-arranging my strategy for 2026 and I'm hoping to really make a stronger impact with my marketing and sales of [Nozbe][n] this year.
+Thanks to him and his advice, I'm completely re-arranging my strategy for 2026 and I'm hoping to make a stronger impact with my marketing and sales of [Nozbe][n] this year.
 
-I think we have a fighting chance against our much bigger and much better-financed competitors.
+I think we have a fighting chance against our much bigger and better-financed competitors.
 
 ## 🎙️ Backstage - how was the recording itself?
 
 First off, as a productivity guy I love how Nathan is batching his podcast recording. He's very busy as a CEO of a 50M a year company so he's recording 4 episodes in 2 days in his recording studio in Boise, Idaho. His recording event was on Tuesday, December 9 and Wednesday December 10. In between the recordings, on Tuesday evening Nathan and his team had all of us guests invited for a dinner in a very nice restaurant in downtown Boise.
 
-I travelled on Monday, got to Boise in the evening (almost 20 hours of air travel). I got to sleep a little and on Tuesday I went to see the studio and see how it all looked like. Then in the evening we had our dinner when I met Nathan and his team and the other guests. I had a great chat with Kara, Nathan's producer. She's a tech geek like myself and she really likes my [home office](/office).
+I travelled on Monday, got to Boise in the evening (almost 20 hours of air travel). I got to sleep a little and on Tuesday I went to see the studio and see how it all looked like. Then in the evening we had our dinner when I met Nathan and his team and the other guests. I had a great chat with Kara. As Nathan's producer, she's a tech geek like myself and also digs my [home office](/office).
 
 ![{{ page.title }} sofa](/img/boise-sofa.jpg)
 
@@ -49,9 +49,9 @@ As we started recording, we first were sitting and discussing some [Nozbe histor
 
 ![{{ page.title }} board](/img/boise-board.jpg)
 
-I won't spoil the podcast for you, but suffice to say that there are three key takeaways from this show for me:
+I won't spoil the podcast for you, but suffice to say that there are 3 key takeaways from this show for me:
 
-1. Nozbe's positioning: *project management app you (and your team) will actually use*
+1. Nozbe's positioning: *project management app you (and your team) will actually use*.
 2. Nozbe's [expert program](https://nozbe.com/expert/?c=michaelteam) as a key way of growing my business.
 3. Metrics and people responsible for them…
 
