--- a/en/_posts/2026-02-03-cooked.md
+++ b/en/_posts/2026-02-03-cooked.md
@@ -77,6 +77,11 @@ Matt put it plainly:
 
 Ditto. Apple, a company that I used to know.
 
+Also worth reading:
+
+- [If Apple is richer than ever, why does it feel so broke?](https://www.macworld.com/article/3050158/winter-of-our-apple-discontent.html)
+- [Tim Cook sold Apple's soul](https://www.loopwerk.io/articles/2026/tim-cook-sold-apples-soul/)
+
 {% include video.html id="8UVNT4wvIGY" name="Gotye - Somebody That I Used To Know" %}
 
 [l]: https://mattgemmell.scot/the-fallen-apple/
