--- a/en/_posts/2025-06-05-nfc.md
+++ b/en/_posts/2025-06-05-nfc.md
@@ -57,6 +57,16 @@ Now to set it all up in *Home* I had to scan 2 QR codes - first one for the Home
 
 ![{{ page.title }} lights](/img/nfc-lights.jpg)
 
+## Updating Homebridge
+
+A few months after I wrote this post I needed to update Homebridge and in the UI the updates failed, so I checked and I needed to run these commands in Terminal:
+
+1. `sudo npm install -g homebridge@latest` - to update Homebridge
+2. `sudo npm install -g homebridge-config-ui-x@latest` - to update its UI
+3. `sudo hb-service update-node` - to update node
+
+And later I could verify the version by typing `homebridge -V` in Terminal. That's it.
+
 ## Beautiful automated podcasting scene
 
 Now that I've got the NFC tags and the Key Lights in my Home app, I can proceed to automate the whole process. When I enter my office, I touch with my iPhone the NFC tag with headphones written on it (see first photo of this blog post) and it triggers the "Podcasting" scene, meaning all my lights turn on and my Sony camera turns on, too. When I leave the office I can touch with iPhone this NFC tag again and everything turns itself off. Glorious.
