--- a/pl/_posts/2025-11-14-nadgryzieni-560.md
+++ b/pl/_posts/2025-11-14-nadgryzieni-560.md
@@ -18,6 +18,44 @@ Ten odcinek podcastu to specjalna, wielogodzinna podróż przez kinematografię,
 <source src="https://media.blubrry.com/nadgryzieni/imagazine.stronazen.pl/nadgryzieni/Nadgryzieni-Odcinek-560-Special.mp3" type="audio/mpeg">
 </audio>
 
+## Moje ulubione filmy:
+
+* [Jerry Maguire (1996)](https://www.themoviedb.org/movie/9390-jerry-maguire)
+* [The Deluge (Potop) (1974)](https://www.themoviedb.org/movie/36627-potop)
+* [The Departed (Infiltracja) (2006)](https://www.themoviedb.org/movie/1422-the-departed)
+* [Sexmission (Seksmisja) (1984)](https://www.themoviedb.org/movie/19673-seksmisja)
+* [Notting Hill (1999)](https://www.themoviedb.org/movie/509-notting-hill)
+* [The Holiday (Holiday) (2006)](https://www.themoviedb.org/movie/1581-the-holiday)
+* [Snatch (Przekręt) (2000)](https://www.themoviedb.org/movie/107-snatch)
+* [The Matrix (Matrix) (1999)](https://www.themoviedb.org/movie/603-the-matrix)
+* [Taken (Uprowadzona) (2008)](https://www.themoviedb.org/movie/8681-taken)
+* [Star Wars (Gwiezdne wojny) (1977)](https://www.themoviedb.org/movie/11-star-wars)
+* [Killer (Kiler) (1997)](https://www.themoviedb.org/movie/31132-kiler)
+* [Titanic (Titanic) (1997)](https://www.themoviedb.org/movie/597-titanic)
+* [Braveheart (Waleczne serce) (1995)](https://www.themoviedb.org/movie/197-braveheart)
+* [When Harry Met Sally… (Kiedy Harry poznał Sally) (1989)](https://www.themoviedb.org/movie/639-when-harry-met-sally)
+* [A Few Good Men (Ludzie Honoru) (1992)](https://www.themoviedb.org/movie/881-a-few-good-men)
+* [The Family Man (2000)](https://www.themoviedb.org/movie/5994-the-family-man)
+* [Die Hard (Szklana Pułapka) (1988)](https://www.themoviedb.org/movie/562-die-hard)
+* [Police Academy (Akademia Policyjna) (1984)](https://www.themoviedb.org/movie/9336-police-academy)
+* [Love & Other Drugs (Miłość i inne używki) (2010)](https://www.themoviedb.org/movie/43347-love-other-drugs)
+* [Pirates of the Caribbean: The Curse of the Black Pearl (Piraci z Karaibów: Klątwa Czarnej Perły) (2003)](https://www.themoviedb.org/movie/22-pirates-of-the-caribbean-the-curse-of-the-black-pearl)
+* [Love Actually (To właśnie miłość) (2003)](https://www.themoviedb.org/movie/508-love-actually)
+* [The Martian (Marsjanin) (2015)](https://www.themoviedb.org/movie/286217-the-martian)
+* [Mr. & Mrs. Smith (Pan i Pani Smith) (2005)](https://www.themoviedb.org/movie/787-mr-mrs-smith)
+* [Cruel Intentions (Szkoła uwodzenia) (1999)](https://www.themoviedb.org/movie/796-cruel-intentions)
+* [Edge of Tomorrow (Na skraju jutra) (2014)](https://www.themoviedb.org/movie/137113-edge-of-tomorrow)
+* [Wild Things (Dzikie żądze) (1998)](https://www.themoviedb.org/movie/617-wild-things)
+* [Shrek (2001)](https://www.themoviedb.org/movie/808-shrek)
+* [Life or Something Like It (Co za życie) (2002)](https://www.themoviedb.org/movie/16643-life-or-something-like-it)
+* [Interstellar (2014)](https://www.themoviedb.org/movie/157336-interstellar)
+* [Heat (Gorączka) (1995)](https://www.themoviedb.org/movie/949-heat)
+* [Mean Girls (Wredne dziewczyny) (2004)](https://www.themoviedb.org/movie/10625-mean-girls)
+* [The Dark Knight (Mroczny Rycerz) (2008)](https://www.themoviedb.org/movie/155-the-dark-knight)
+* [The Secret of My Success (1987)](https://www.themoviedb.org/movie/10021-the-secret-of-my-success)
+* [Greystoke: The Legend of Tarzan, Lord of the Apes (Legenda Tarzana, władcy małp) (1984)](https://www.themoviedb.org/movie/11002-greystoke-the-legend-of-tarzan-lord-of-the-apes)
+* [The Fly (Mucha) (1986)](https://www.themoviedb.org/movie/9426-the-fly)
+
 
 
 [Notatki do odcinka na stronie iMagazine](https://imagazine.pl/2025/11/14/560-special-filmy-naszego-zycia-nadgryzieni/)
