--- a/pl/_posts/2025-11-21-nadgryzieni-561.md
+++ b/pl/_posts/2025-11-21-nadgryzieni-561.md
@@ -18,6 +18,30 @@ Ten odcinek podcastu to specjalna, wielogodzinna audycja w całości poświęcon
 <source src="https://media.blubrry.com/nadgryzieni/imagazine.stronazen.pl/nadgryzieni/Nadgryzieni-Odcinek-561-Special.mp3" type="audio/mpeg">
 </audio>
 
+## Moje ulubione seriale:
+
+* [Gilmore Girls (Kochane Kłopoty) (2000)](https://www.themoviedb.org/tv/4586-gilmore-girls)
+* [Grey’s Anatomy (Chirurdzy) (2005)](https://www.themoviedb.org/tv/1416-grey-s-anatomy)
+* [Ted Lasso (2020)](https://www.themoviedb.org/tv/97546-ted-lasso)
+* [Pride and Prejudice (Duma i Uprzedzenie) (1995)](https://www.themoviedb.org/tv/1457-pride-and-prejudice)
+* [’Allo 'Allo! (1984)](https://www.themoviedb.org/tv/2211-allo-allo)
+* [Downton Abbey (2010)](https://www.themoviedb.org/tv/33907-downton-abbey)
+* [Parenthood (2010)](https://www.themoviedb.org/tv/21762-parenthood)
+* [Suits (W garniturach) (2011)](https://www.themoviedb.org/tv/37680-suits)
+* [Prison Break (Skazany na śmierć) (2005)](https://www.themoviedb.org/tv/2288-prison-break)
+* [Silicon Valley (Dolina Krzemowa) (2014)](https://www.themoviedb.org/tv/60573-silicon-valley)
+* [Bones (Kości) (2005)](https://www.themoviedb.org/tv/1911-bones)
+* [Baywatch (Słoneczny Patrol) (1989)](https://www.themoviedb.org/tv/4386-baywatch)
+* [Severance (Rozdzielenie) (2022)](https://www.themoviedb.org/tv/95396-severance)
+* [Glee (2009)](https://www.themoviedb.org/tv/1417-glee)
+* [How I Met Your Mother (Jak poznałem waszą matkę) (2005)](https://www.themoviedb.org/tv/1100-how-i-met-your-mother)
+* [Californication (2007)](https://www.themoviedb.org/tv/1215-californication)
+* [The Crown (Korona) (2016)](https://www.themoviedb.org/tv/65494-the-crown)
+* [Nobody Wants This (Nikt tego nie chce) (2024)](https://www.themoviedb.org/tv/250923-nobody-wants-this)
+* [Friends (Przyjaciele) (1994)](https://www.themoviedb.org/tv/1668-friends)
+* [The Morning Show (2019)](https://www.themoviedb.org/tv/90282-the-morning-show)
+* [Silo (2023)](https://www.themoviedb.org/tv/125988-silo)
+* [4 Alternative Street (Alternatywy 4) (1986)](https://www.themoviedb.org/tv/43250-alternatywy-4)
 
 
 [Notatki do odcinka na stronie iMagazine](https://imagazine.pl/2025/11/21/561-special-seriale-naszego-zycia-nadgryzieni/)
