--- a/en/_posts/2026-02-16-skiing.md
+++ b/en/_posts/2026-02-16-skiing.md
@@ -8,11 +8,10 @@ m: https://social.nozbe.com/users/michael/statuses/116087335030647915
 
 How has my long term thinking impacted my attitude towards skiing? Yes, seriously, there’s a connection and a good one!
 
-
-
 <!--More-->
 
 ![{{ page.title }}](/img/{{ page.cover }})
+
 ## I’m an avid skier ⛷️ 
 
 I learned to ski when I was a little over 10 years old and I’ve been skiing almost every year all my life. I love the speed, the wind, the snow, the freedom, the exhaustion at the end of a great day in the mountains…
@@ -38,6 +37,17 @@ And it's fun.
 Today as I was going downhill with my daughters, seeing them how much they enjoy it and how happy they are skiing with me, I know it paid off.
 
 Instead of going on solo ski trips, I get to spend them with my family and share my beloved sport with them!
+
+## Stats in the last few years…
+
+Update after the week. Look at the stats. i went skiing alone in 2019 for 2 days and in the beginning of 2020 (right before the pandemic) and later nothing… and then with family:
+
+![{{ page.title }}](/img/skiing-stats.jpg)
+
+* 2023: only 23 km as I was mostly teaching my daughters to ski.
+* 2024: doubled at 46 km as we were doing some longer rides. Still lots of teaching.
+* 2025: doubled that at 82 km as we went for a proper 4-day ski trip and girls were even better.
+* 2026: a whopping 130km in 5 days of skiing where not only they were even better but they wanted to ski more and do it with their daddy 😍
 
 <!--m: https://social.nozbe.com/users/michael/statuses/116087335030647915-->
 
