--- a/en/_posts/2026-02-27-lamp.md
+++ b/en/_posts/2026-02-27-lamp.md
@@ -89,7 +89,7 @@ Later I connected the lamp's USB brick to a smart plug that's connected [to my s
 
 Which just looks great also in the background of my video footage whenever I'm on a Zoom call or [podcast recording](/noofficefm/):
 
-![{{ page.title }} lamp-camera](/img/lamp-lamp-camera.jpg)
+![{{ page.title }} lamp-camera](/img/lamp-camera.jpg)
 
 I'm really enjoying my new [LEGO](/lego) lamp! What a great Christmas gift!
 
