--- a/en/_posts/2026-02-27-lamp.md
+++ b/en/_posts/2026-02-27-lamp.md
@@ -1,5 +1,5 @@
 ---
-tags: [legolego,featured]
+tags: [lego,featured]
 cover: "lamp.jpg"
 social: "lamp.jpg"
 ---
@@ -92,6 +92,12 @@ Which just looks great also in the background of my video footage whenever I'm o
 ![{{ page.title }} lamp-camera](/img/lamp-camera.jpg)
 
 I'm really enjoying my new [LEGO](/lego) lamp! What a great Christmas gift!
+
+## PS. Video tutorial with Easter eggs explained…
+
+I found this cool video walkthrough on the Internet where the guy explains the many Easter eggs hidden in this Lego set 🐣:
+
+{% include video.html id="HoP1BOY3zSw" name="Luxo Jr LEGO with LED light kit!" %}
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
